deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-api
  namespace: user-kbourbon
  labels:
    app: loan-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-api
  template:
    metadata:
      labels:
        app: loan-api
      annotations:
        git-sync/force-restart: "2026-04-15"
    spec:
      containers:
        - name: loan-api
          image: kellybrbn/loan-api:72e74bee453b8b23facecf78f7d5f4b46116dbab
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
