deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-api
  namespace: user-kbourbon
  labels:
    app: loan-api
spec:
  selector:
    app: loan-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
