deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-api
  namespace: user-kbourbon
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: onyxia
  rules:
    - host: loan-api-user-kbourbon.user.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-api
                port:
                  number: 80
  tls:
    - hosts:
        - loan-api-user-kbourbon.user.lab.sspcloud.fr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: user-kbourbon
spec:
  ingressClassName: onyxia
  rules:
    - host: grafana-loan-user-kbourbon.user.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - grafana-loan-user-kbourbon.user.lab.sspcloud.fr
